--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,11 @@
       package="com.hrdapp.android.DroidControl"
       android:versionCode="1"
       android:versionName="1.0">
-
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".DroidControlActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -17,7 +20,4 @@
                   android:theme="@android:style/Theme.Dialog"
                   android:configChanges="orientation|keyboardHidden" />
     </application>
-    <uses-sdk android:minSdkVersion="7" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
 </manifest>
